added new message from branch

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
       My website</title>
   </head>
   <body>
-    this is my Para>
-  </body>
+<p>
+    this is my Para
+</p>
+<p> Hello from branch file</p>
+ </body>
   
 </html>
